--- a/views/colleges/index.ejs
+++ b/views/colleges/index.ejs
@@ -7,9 +7,9 @@
     <div class="row">
         <div class="col-md-4">
           <%if(clg.images.length){%>
-            <img class="img-fluid" alt="" src="<%=clg.images[0].url%>">
+            <img crossorigin="anonymous" class="img-fluid" alt="" src="<%=clg.images[0].url%>">
             <%}else{%>
-              <img class="img-fluid" alt="" src="https://www.mit.edu/files/images/201807/15656704711_00457bd2c9_b_1.jpg">
+              <img crossorigin="anonymous" class="img-fluid" alt="" src="https://www.mit.edu/files/images/201807/15656704711_00457bd2c9_b_1.jpg">
               <%}%>
         </div>
         <div class="col-md-8">
